# aggregator2

./: Cargo.toml  build.rs  config.toml
src/: candle_provider.rs  config.rs  domain.rs  lib.rs  main.rs
